--- a/client/src/app/TodoItems/progress-bar/progress-bar.component.scss
+++ b/client/src/app/TodoItems/progress-bar/progress-bar.component.scss
@@ -3,4 +3,22 @@
   top: 0px;
   z-index: 99;
   background: #fff;
+  margin-bottom: 1.5em;
+}
+
+.progress-details {
+  text-align: left;
+}
+
+.progress-person {
+  text-align: center;
+  margin: 0;
+}
+p {
+  font-weight: bold;
+  margin-bottom: 0;
+}
+
+span {
+  font-weight: normal;
 }
