--- a/client/src/app/TodoItems/todo-items-item/todo-items-item.component.html
+++ b/client/src/app/TodoItems/todo-items-item/todo-items-item.component.html
@@ -21,6 +21,7 @@
       <b>{{ todoItem.name }}</b>
 
       <p>{{ todoItem.description }}</p>
+      <p>{{ todoItem.taskType }}</p>
     </div>
     <span class="item-date"
       >created <em>{{ todoItem.creationDate | date: "medium" }}</em></span
