--- a/client/src/app/Account/login/login.component.html
+++ b/client/src/app/Account/login/login.component.html
@@ -1,6 +1,13 @@
-<form [formGroup]="loginForm" (ngSubmit)="login()">
-  <input formControlName="username" type="text" />
-  <input formControlName="password" type="password" />
+<form [formGroup]="loginForm" (ngSubmit)="loginForm.valid && login()">
+  <app-text-input
+    [formControl]="loginForm.controls['username']"
+    [label]="'Username'"
+  ></app-text-input>
+  <app-text-input
+    [formControl]="loginForm.controls['password']"
+    [type]="'password'"
+    [label]="'Password'"
+  ></app-text-input>
   <button type="submit" [disabled]="!loginForm.valid">Login</button>
 </form>
 <p>
