--- a/client/src/app/TodoItems/todo-items-add/todo-items-add.component.html
+++ b/client/src/app/TodoItems/todo-items-add/todo-items-add.component.html
@@ -1,32 +1,38 @@
 <form
   [formGroup]="todoForm"
-  (ngSubmit)="onSubmit()"
+  (ngSubmit)="todoForm.valid && onSubmit()"
   *ngIf="addingItem"
   autocomplete="off"
 >
   <div class="form-inputs">
+    <app-text-input
+      [formControl]="todoForm.controls['name']"
+      [label]="'Name of a task'"
+    ></app-text-input>
+    <app-text-area
+      [formControl]="todoForm.controls['description']"
+      [label]="'Description'"
+      [rows]="1"
+      [cols]="30"
+    ></app-text-area>
     <div class="form-group">
-      <label for="name">Name of task</label>
-      <input
-        type="text"
-        id="name"
-        class="form-control"
-        formControlName="name"
-      />
-    </div>
-    <div class="form-group">
-      <label for="description">Description</label>
-      <textarea
-        id="description"
-        class="form-control"
-        formControlName="description"
-        rows="1"
-      ></textarea>
+      <label>Task Type</label>
+      <select formControlName="taskType" class="form-control">
+        <option *ngFor="let task of taskTypes | keys" [ngValue]="task.value">
+          {{ task.value }}
+        </option>
+      </select>
     </div>
   </div>
-  <button type="submit">submit</button>
+  <div>
+    <button [disabled]="!todoForm.valid" class="btn btn-primary" type="submit">
+      submit
+    </button>
+  </div>
 </form>
-<button type="button" class="btn-add" (click)="addingItem = !addingItem">
-  <span *ngIf="!addingItem; else cancel">Add item to-do</span>
-  <ng-template #cancel>Cancel</ng-template>
+<button type="button" class="btn-add" *ngIf="!addingItem" (click)="onAdding()">
+  Add item to-do
+</button>
+<button class="btn-add mt-2" *ngIf="addingItem" (click)="onCancelAdding()">
+  Cancel
 </button>
