--- a/client/src/app/TodoItems/todo-items-list/todo-items-list.component.scss
+++ b/client/src/app/TodoItems/todo-items-list/todo-items-list.component.scss
@@ -10,7 +10,7 @@
 
 .list-inner {
   display: grid;
-  grid-template-columns: 0.3fr 1fr;
+  grid-template-columns: 0.35fr 1fr;
   column-gap: 2em;
 }
 
@@ -27,4 +27,18 @@
   display: flex;
   align-items: center;
   flex-direction: column;
+}
+
+.user {
+  margin-top: 0.8em;
+}
+.aaa {
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+  height: 40em;
+}
+
+.btn {
+  width: 5.7em;
 }
