--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -13,11 +13,23 @@ body {
   font-family: Roboto, "Helvetica Neue", sans-serif;
 }
 
-p {
-  margin: 0;
-}
-
 button {
   border: none;
   background: none;
+}
+
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+.form-group {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  margin-right: 0.4em;
 }
