--- a/client/src/app/Navbar/navbar/navbar.component.scss
+++ b/client/src/app/Navbar/navbar/navbar.component.scss
@@ -2,7 +2,8 @@
   display: flex;
   align-items: center;
   border-bottom: 1px solid #000;
-  height: 4.4em;
+  height: 5em;
+  padding-top: 0.4em;
   font-size: 1.1em;
 }
 
