--- a/client/src/app/TodoItems/todo-items-item/todo-items-item.component.html
+++ b/client/src/app/TodoItems/todo-items-item/todo-items-item.component.html
@@ -1,33 +1,44 @@
 <div class="todo-item">
-  <label
-    class="checkbox"
-    [ngbTooltip]="isDone == false ? 'Click to complete task' : 'Task completed'"
-  >
-    <input
-      type="checkbox"
-      class="checkbox__input"
-      [checked]="isDone"
-      (click)="onUpdateItem(todoItem.id)"
-      [disabled]="isDone"
-    />
-    <span class="checkbox__inner"></span>
-  </label>
+  <div class="item-details">
+    <label
+      class="checkbox"
+      [ngbTooltip]="
+        isDone == false ? 'Click to complete task' : 'Task completed'
+      "
+    >
+      <input
+        type="checkbox"
+        class="checkbox__input"
+        [checked]="isDone"
+        (click)="onUpdateItem(todoItem.id)"
+      />
+      <span class="checkbox__inner"></span>
+    </label>
 
-  <button type="button" (click)="onDeleteItem(todoItem.id)" ngbTooltip="Delete">
-    <i class="fa fa-trash fa-2x"></i>
-  </button>
-  <div class="description-wrap">
-    <div class="description-text">
-      <b>{{ todoItem.name }}</b>
+    <button
+      type="button"
+      (click)="onDeleteItem(todoItem.id)"
+      ngbTooltip="Delete"
+    >
+      <i class="fa fa-trash fa-2x"></i>
+    </button>
+    <div class="description-wrap">
+      <div class="description-text">
+        <p><b>Task Name: </b>{{ todoItem.name }}</p>
 
-      <p>{{ todoItem.description }}</p>
-      <p>{{ todoItem.taskType }}</p>
+        <p><b>Task Description: </b>{{ todoItem.description }}</p>
+        <div class="description-dates">
+          <p class="item-date">
+            <b>Created: </b>{{ todoItem.creationDate | date: "short" }}
+          </p>
+          <p class="item-date" *ngIf="todoItem.completionDate">
+            <b>Completed: </b>{{ todoItem.completionDate | date: "short" }}
+          </p>
+        </div>
+      </div>
     </div>
-    <span class="item-date"
-      >created <em>{{ todoItem.creationDate | date: "medium" }}</em></span
-    >
-    <span class="item-date" *ngIf="todoItem.completionDate"
-      >completed <em>{{ todoItem.completionDate | date: "medium" }}</em></span
-    >
   </div>
+  <p [ngClass]="getTaskTypeClass()" class="task-tag">
+    {{ todoItem.taskType }}
+  </p>
 </div>
