--- a/client/src/app/app.component.scss
+++ b/client/src/app/app.component.scss
@@ -8,5 +8,6 @@
   min-height: 50em;
   margin: 0 auto;
   border-radius: 5em;
-  padding: 1em;
+  padding: 0 1.8em;
+  box-shadow: 0 19px 38px rgba(0, 0, 0, 0.3), 0 15px 12px rgba(0, 0, 0, 0.22);
 }
