--- a/client/src/app/TodoItems/todo-items-item/todo-items-item.component.scss
+++ b/client/src/app/TodoItems/todo-items-item/todo-items-item.component.scss
@@ -2,9 +2,13 @@
 
 .todo-item {
   display: flex;
-  flex-direction: row;
+  justify-content: space-between;
   width: 100%;
   padding: 1em;
+}
+
+.item-details {
+  display: flex;
 }
 
 .checkbox {
@@ -39,23 +43,41 @@
 }
 
 .description-text {
-  display: grid;
-  grid-template-columns: 0.2fr 1fr;
-  column-gap: 0.3em;
-
-  :nth-child(1) {
-    padding-right: 6px;
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: left;
-  }
-
-  :nth-child(2) {
-    text-align: left;
-  }
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
 }
 
-.item-date {
+.description-dates {
   display: flex;
+}
+
+p {
+  margin: 0;
+  line-height: 1.4em;
+}
+
+.item-date:first-of-type {
+  padding-right: 0.6em;
+}
+
+.task-tag {
+  background: gray;
+  color: #fff;
+  height: 2em;
+  padding: 0.3em 0.8em;
+  border-radius: 1em;
+}
+
+.none {
+  background-color: #6c757d;
+}
+.home {
+  background-color: #28a745;
+}
+.work {
+  background-color: #dc3545;
+}
+.shopping {
+  background-color: #17a2b8;
 }
