--- a/client/src/app/TodoItems/todo-items-list/todo-items-list.component.scss
+++ b/client/src/app/TodoItems/todo-items-list/todo-items-list.component.scss
@@ -1,11 +1,6 @@
 .list-wrapper {
   background: #fff;
   text-align: center;
-  min-height: 40em;
-  max-height: 40em;
-  padding: 0 1em;
-  overflow-y: auto;
-  overflow: overlay;
 }
 
 .list-inner {
@@ -14,12 +9,6 @@
   column-gap: 2em;
 }
 
-.nav-tabs {
-  position: sticky;
-  top: 0px;
-  z-index: 99;
-  background: #fff;
-}
 .nav-tabs li:first-child {
   margin-left: auto;
 }
@@ -31,14 +20,38 @@
 
 .user {
   margin-top: 0.8em;
+  width: 18em;
 }
-.aaa {
+
+.list-tasks {
+  border-left: 1px solid black;
   display: flex;
   justify-content: space-between;
   flex-direction: column;
-  height: 40em;
+  min-height: 40em;
+  max-height: 40em;
+  overflow-y: auto;
+  overflow: overlay;
+  padding-right: 1.4em;
+  margin-right: -1.4em;
 }
 
 .btn {
   width: 5.7em;
+  box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
+}
+
+.container {
+  white-space: nowrap;
+}
+
+::ng-deep .mat-tab-header {
+  position: sticky !important;
+  top: 0px;
+  z-index: 99;
+  background: #fff;
+}
+
+::ng-deep .mat-tab-labels {
+  justify-content: right !important;
 }
