--- a/client/src/app/Account/register/register.component.html
+++ b/client/src/app/Account/register/register.component.html
@@ -1,4 +1,6 @@
 <form [formGroup]="registerForm" (ngSubmit)="registerForm.valid && register()">
+  <h1>Register</h1>
+
   <app-text-input
     [formControl]="registerForm.controls['username']"
     [label]="'Username'"
@@ -14,7 +16,13 @@
     [label]="'Confirm Password'"
   ></app-text-input>
 
-  <button type="submit" [disabled]="!registerForm.valid">Register</button>
+  <button
+    class="btn btn-primary"
+    type="submit"
+    [disabled]="!registerForm.valid"
+  >
+    Register
+  </button>
 </form>
 <div *ngIf="registered">You were successfully registered. Redirecting...</div>
 <div class="row" *ngIf="validationErrors.length > 0">
