--- a/client/src/app/TodoItems/todo-items-list/todo-items-list.component.scss
+++ b/client/src/app/TodoItems/todo-items-list/todo-items-list.component.scss
@@ -45,6 +45,10 @@
   white-space: nowrap;
 }
 
+.no-tasks {
+  margin-top: 10.4em;
+}
+
 ::ng-deep .mat-tab-header {
   position: sticky !important;
   top: 0px;
