minor style changes

--- a/client/src/app/TodoItems/progress-bar/progress-bar.component.html
+++ b/client/src/app/TodoItems/progress-bar/progress-bar.component.html
@@ -6,7 +6,7 @@
       Total Tasks: <span>{{ todoItems.length }}</span>
     </p>
     <p>
-      Finished Tasks: <span>{{ doneItems }}</span>
+      Completed Tasks: <span>{{ doneItems }}</span>
     </p>
   </div>
 
