--- a/client/src/app/Home/home.component.html
+++ b/client/src/app/Home/home.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <h1>Welcome to To-Do app</h1>
+  <h1>Welcome to To-Do App</h1>
   <a *ngIf="!(accountService.currentUser$ | async)" routerLink="/register"
     >Register here</a
   >
